[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/naive_dialog_plugin/dialog_graph_editor/DialogGraphDataEdit_GraphNode.gd" type="Script" id=1]

[node name="GraphNode" type="GraphNode"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = -262.0
margin_bottom = -200.0
rect_min_size = Vector2( 250, 100 )
title = "NodeType"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopHBoxContainer" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 234.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="TopHBoxContainer"]
margin_right = 107.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "In"
valign = 1

[node name="Label2" type="Label" parent="TopHBoxContainer"]
margin_left = 111.0
margin_right = 218.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Out"
align = 2
valign = 1

[node name="BottomHBoxContainer" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 49.0
margin_right = 234.0
margin_bottom = 79.0

[node name="Label" type="Label" parent="BottomHBoxContainer"]
margin_top = 3.0
margin_right = 171.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Condition List"

[node name="AddCondButton" type="Button" parent="BottomHBoxContainer"]
margin_left = 175.0
margin_right = 196.0
margin_bottom = 30.0
text = "+"
flat = true

[node name="RemoveCondButton" type="Button" parent="BottomHBoxContainer"]
margin_left = 200.0
margin_right = 218.0
margin_bottom = 30.0
text = "-"
flat = true

[connection signal="offset_changed" from="." to="." method="_on_GraphNode_offset_changed"]
[connection signal="resized" from="." to="." method="_on_GraphNode_resized"]
[connection signal="pressed" from="BottomHBoxContainer/AddCondButton" to="." method="_on_AddCondButton_pressed"]
[connection signal="pressed" from="BottomHBoxContainer/RemoveCondButton" to="." method="_on_RemoveCondButton_pressed"]
